# FlexBisonCrossTemplate

./: CMakeLists.txt  LICENSE  README.md  calculator.l  calculator.y  hello.cpp
.github/workflows/: cmake-multi-platform.yml
scripts/: flex-bison.cmake
